--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "nuxt",
-  "version": "1.0.0",
-  "description": "My stupendous Nuxt.js project",
-  "author": "windguo",
-  "private": true,
+  "name": "example-async-data",
+  "dependencies": {
+    "axios": "latest",
+    "nuxt": "latest"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
-  "dependencies": {
-    "@nuxtjs/axios": "^5.4.1",
-    "axios": "^0.18.0",
-    "cross-env": "^5.2.0",
-    "nuxt": "^2.4.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.9"
+    "generate": "nuxt generate",
+    "post-update": "yarn upgrade --latest"
   }
 }
